# ds-daily-brief

./: .gitignore  CLAUDE.md  archive.html  index.html  pyproject.toml
.github/workflows/: daily.yml
category/: ai-agent.html  causal-inference.html  deep-learning.html  industry-application.html  llm-foundation-model.html  mlops.html  practice.html  predictive-modeling.html
config/: categories.yaml  sources.yaml
data/: seen.json  written_2026-07-16.json
data/published/: 2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/raw/collect/: 2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/raw/dedup/: 2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/raw/rank/: 2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/raw/select/: 2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
docs/: DECISIONS.md  DESIGN.md  PLAN.md  SPEC.md  TASK.md
news/2026/07/: 16.html  17.html  18.html  19.html  (+5 more)
scripts/: replay.py
src/: build_site.py  config.py  dedup.py  models.py  publish.py  rank.py  render.py  run_collect.py  run_daily.py  run_phase1.py  run_phase2.py  select.py  snapshot.py  write.py
src/collectors/: anthropic_news.py  arxiv.py  base.py  github.py  huggingface.py  keywords.py
src/deliver/: __init__.py  telegram.py
tests/: coverage_cases.yaml
