[project]
name = "ds-daily-brief"
version = "0.1.0"
description = "DS/AI 일간 뉴스 브리핑 자동 생성·발송 (Phase 0: 수집기)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "anthropic>=0.40",
]

# 애플리케이션 프로젝트 — 패키지로 빌드/설치하지 않음. uv run 으로 실행.
